--- a/package.json
+++ b/package.json
@@ -15,14 +15,18 @@
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
     "@react-navigation/native": "^6.1.18",
+    "babel-plugin-inline-import": "^3.0.0",
+    "drizzle-orm": "^0.32.0",
     "expo": "~51.0.22",
     "expo-font": "~12.0.9",
     "expo-linking": "~6.3.1",
     "expo-router": "~3.5.18",
     "expo-splash-screen": "~0.27.5",
+    "expo-sqlite": "^14.0.4",
     "expo-status-bar": "~1.12.1",
     "expo-system-ui": "~3.0.7",
     "expo-web-browser": "~13.0.3",
+    "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.74.3",
@@ -34,9 +38,11 @@
   "devDependencies": {
     "@babel/core": "^7.24.9",
     "@types/react": "~18.2.45",
+    "drizzle-kit": "^0.23.0",
     "jest": "^29.7.0",
     "jest-expo": "~51.0.3",
     "react-test-renderer": "18.2.0",
+    "tailwindcss": "^3.3.2",
     "typescript": "~5.3.3"
   },
   "private": true
